--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,7 +6,7 @@
   justify-content: center;
   width: 100%;
   position: absolute;
-  padding: 0 24px;
+  padding: 0 20px;
 }
 
 .h1 {
@@ -14,7 +14,7 @@
 }
 
 .explain {
-  font-size: 1.125rem;
+  font-size: 2.125rem;
   max-width: 1200px;
 }
 
@@ -45,10 +45,10 @@
 
 .nftBox {
   border-radius: 60px;
-  border: 3px solid #5b0dc0;
-  width: 36%;
+  border: 6px solid #5b0dc0;
+  width: 42%;
   min-height: 90px;
-  padding: 90px;
+  padding: 17px;
 }
 
 .optionSelectBox {
@@ -63,7 +63,7 @@
   justify-content: center;
   padding-left: 12px;
   padding-right: 12px;
-  cursor: pointer;
+  cursor: crosshair;
 }
 
 .selectBoxTitle {
@@ -92,8 +92,8 @@
     justify-content: center;
   }
   .nftBox {
-    width: 80%;
-    margin-top: 16px;
+    width: 75%;
+    margin-top: 10px;
   }
   .optionSelectBox {
     width: 20%;
@@ -114,7 +114,7 @@
 }
 
 .tokenItem {
-  width: 42%;
+  width: 60%;
   height: 100px;
   border-radius: 55px;
   display: flex;
@@ -126,7 +126,7 @@
 }
 
 .tokenLabel {
-  margin-top: 0px;
+  margin-top: 9px;
   margin-bottom: 0px;
   font-weight: 600;
   color: rgba(161, 28, 238, 0.7);
@@ -157,15 +157,15 @@
 }
 
 .spacerTop {
-  margin-top: 16px;
+  margin-top: 8px;
 }
 
 .bigSpacerTop {
-  margin-top: 55px;
+  margin-top: 25px;
 }
 
 .spacerBottom {
-  margin-bottom: 12px;
+  margin-bottom: 42px;
 }
 
 .detailPageHr {
@@ -174,7 +174,8 @@
 }
 
 .nftMedia {
-  width: 100%;
-  max-height: 300px;
-  border-radius: 12px;
+  width: 80%;
+  max-height: 210px;
+  border-radius: 56px;
+  justify-content: center;
 }
